--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "crud-operations-with-express",
   "version": "1.0.0",
   "scripts": {
-    "start": "node dist/index.js",
+    "start": "node dist/app.js",
     "build": "tsc",
-    "dev": "nodemon src/index.ts",
+    "dev": "nodemon src/app.ts",
     "lint": "eslint src --ext .ts",
     "format": "prettier --write src/**/*.ts"
   },
