--- a/backend/package.json
+++ b/backend/package.json
@@ -35,6 +35,8 @@
     "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^22.13.11",
     "@types/pg": "^8.11.11",
+    "@types/swagger-jsdoc": "^6.0.4",
+    "@types/swagger-ui-express": "^4.1.8",
     "nodemon": "^3.1.9",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.2"
