--- a/backend/package.json
+++ b/backend/package.json
@@ -26,6 +26,7 @@
     "express-session": "^1.18.1",
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
+    "multer": "^1.4.5-lts.2",
     "nodemailer": "^6.10.0",
     "passport": "^0.7.0",
     "passport-github2": "^0.1.12",
@@ -43,6 +44,7 @@
     "@types/express": "^5.0.1",
     "@types/express-session": "^1.18.1",
     "@types/jsonwebtoken": "^9.0.9",
+    "@types/multer": "^1.4.12",
     "@types/node": "^22.13.11",
     "@types/passport": "^1.0.17",
     "@types/passport-github2": "^1.2.9",
