--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,8 +14,12 @@
     "@tailwindcss/vite": "^4.0.17",
     "@tanstack/react-query": "^5.69.0",
     "axios": "^1.8.4",
+    "framer-motion": "^12.9.1",
     "lucide-react": "^0.484.0",
     "react": "^19.0.0",
+    "react-beautiful-dnd": "^13.1.1",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.55.0",
     "react-hot-toast": "^2.5.2",
@@ -28,6 +32,7 @@
     "@eslint/js": "^9.21.0",
     "@tailwindcss/postcss": "^4.0.17",
     "@types/react": "^19.0.10",
+    "@types/react-beautiful-dnd": "^13.1.8",
     "@types/react-dom": "^19.0.4",
     "@vitejs/plugin-react": "^4.3.4",
     "autoprefixer": "^10.4.21",
