--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.3.1",
     "@headlessui/react": "^2.2.1",
     "@tailwindcss/vite": "^4.0.17",
     "@tanstack/react-query": "^5.69.0",
