--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
     "connect-redis": "^8.0.2",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
+    "date-fns": "^4.1.0",
     "dotenv": "^16.4.7",
     "eslint": "^9.23.0",
     "eslint-config-prettier": "^10.1.1",
@@ -27,6 +28,7 @@
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.2",
+    "node-cron": "^4.0.2",
     "nodemailer": "^6.10.0",
     "passport": "^0.7.0",
     "passport-github2": "^0.1.12",
