--- a/backend/package.json
+++ b/backend/package.json
@@ -36,6 +36,7 @@
     "pg": "^8.14.1",
     "prettier": "^3.5.3",
     "redis": "^4.7.0",
+    "stripe": "^18.1.0",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1"
   },
