--- a/backend/package.json
+++ b/backend/package.json
@@ -55,6 +55,7 @@
     "@types/passport-google-oauth20": "^2.0.16",
     "@types/passport-oauth2": "^1.4.17",
     "@types/pg": "^8.15.1",
+    "@types/stripe": "^8.0.416",
     "@types/swagger-jsdoc": "^6.0.4",
     "@types/swagger-ui-express": "^4.1.8",
     "nodemon": "^3.1.9",
