--- a/backend/package.json
+++ b/backend/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "scripts": {
     "start": "node dist/app.js",
-    "build": "npm install --include=dev && tsc",
+    "build": "tsc",
     "dev": "nodemon src/app.ts",
     "lint": "eslint src --ext .ts",
     "format": "prettier --write src/**/*.ts"
@@ -14,7 +14,7 @@
   "description": "",
   "dependencies": {
     "@types/nodemailer": "^6.4.17",
-    "bcrypt": "^5.1.1",
+    "bcryptjs": "^3.0.2",
     "connect-redis": "^8.0.2",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
@@ -41,7 +41,6 @@
     "swagger-ui-express": "^5.0.1"
   },
   "devDependencies": {
-    "@types/bcrypt": "^5.0.2",
     "@types/connect": "^3.4.38",
     "@types/cookie-parser": "^1.4.8",
     "@types/cors": "^2.8.18",
