--- a/backend/.env.example
+++ b/backend/.env.example
@@ -9,3 +9,21 @@ JWT_SECRET=
 JWT_REFRESH_SECRET=
 
 NODE_ENV=
+
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
+GITHUB_CLIENT_ID=
+GITHUB_CLIENT_SECRET=
+
+FRONTEND_URL=
+SESSION_SECRET=
+
+# Email Configuration
+EMAIL_USER=
+EMAIL_APP_PASSWORD=
+
+REDIS_URL=
+
+STRIPE_SECRET_KEY=
+PREMIUM_PLAN_PRICE_ID=
+STRIPE_WEBHOOK_SECRET=
