--- a/backend/package.json
+++ b/backend/package.json
@@ -34,6 +34,7 @@
     "passport-github2": "^0.1.12",
     "passport-google-oauth20": "^2.0.0",
     "pg": "^8.14.1",
+    "pg-format": "^1.0.4",
     "prettier": "^3.5.3",
     "redis": "^4.7.0",
     "stripe": "^18.1.0",
@@ -54,6 +55,7 @@
     "@types/passport-google-oauth20": "^2.0.16",
     "@types/passport-oauth2": "^1.4.17",
     "@types/pg": "^8.15.1",
+    "@types/pg-format": "^1.0.5",
     "@types/stripe": "^8.0.416",
     "@types/swagger-jsdoc": "^6.0.4",
     "@types/swagger-ui-express": "^4.1.8",
