--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -2,7 +2,7 @@
     "rewrites": [
         {
             "source": "/api/(.*)",
-            "destination": "http://localhost:5000/api/$1"
+            "destination": "https://task-managger.onrender.com/api/$1"
         },
         {
             "source": "/(.*)",
