--- a/backend/package.json
+++ b/backend/package.json
@@ -45,6 +45,9 @@
     "swagger-ui-express": "^5.0.1"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
     "@types/connect": "^3.4.38",
     "@types/cookie-parser": "^1.4.8",
     "@types/cors": "^2.8.18",
@@ -65,6 +68,7 @@
     "@types/swagger-jsdoc": "^6.0.4",
     "@types/swagger-ui-express": "^4.1.8",
     "jest": "^29.7.0",
+    "jest-environment-jsdom": "^30.0.0",
     "nodemon": "^3.1.9",
     "supertest": "^7.1.1",
     "ts-jest": "^29.3.4",
