fix cookies bug and add some comment where needed

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,29 +1,38 @@
-PORT=
-DB_USER=
-DB_HOST=
-DATABASE=
-DB_PORT=
-DB_PASSWORD=
+# Postgre connection (from docker-compose)
+PORT= #5000
+DB_USER= #postgres
+DB_HOST= #db
+DATABASE= #task-managger
+DB_PORT= #5432
+DB_PASSWORD= #123
 
+# authenticate
 JWT_SECRET=
 JWT_REFRESH_SECRET=
 
-NODE_ENV=
-
+# oauth properties
+GOOGLE_CALLBACK_URL=
 GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
+
+GITHUB_CALLBACK_URL=
 GITHUB_CLIENT_ID=
 GITHUB_CLIENT_SECRET=
 
-FRONTEND_URL=
 SESSION_SECRET=
+
+# url for email send and backend url to configure swagger
+FRONTEND_URL=
+BACKEND_URL=
 
 # Email Configuration
 EMAIL_USER=
 EMAIL_APP_PASSWORD=
 
-REDIS_URL=
+# redis
+REDIS_URL= #redis://localhost:6379
 
+# payment
 STRIPE_SECRET_KEY=
 PREMIUM_PLAN_PRICE_ID=
 STRIPE_WEBHOOK_SECRET=
