--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,10 +1,10 @@
 # Postgre connection (from docker-compose)
-PORT= #5000
-DB_USER= #postgres
-DB_HOST= #db
-DATABASE= #task-managger
-DB_PORT= #5432
-DB_PASSWORD= #123
+PORT=
+DB_USER=
+DB_HOST=
+DATABASE=
+DB_PORT=
+DB_PASSWORD=
 
 # authenticate
 JWT_SECRET=
@@ -30,7 +30,7 @@ EMAIL_USER=
 EMAIL_APP_PASSWORD=
 
 # redis
-REDIS_URL= #redis://localhost:6379
+REDIS_URL=
 
 # payment
 STRIPE_SECRET_KEY=
